# crewai_usecase

./: README.md
crewai/usecase/: README.md  pyproject.toml  report.md  trip_plan.md
crewai/usecase/src/usecase/: crew.py  main.py
crewai/usecase/src/usecase/config/: agents.yaml  tasks.yaml
