[project]
name = "usecase"
version = "0.1.0"
description = "usecase using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.175.0,<1.0.0"
]

[project.scripts]
usecase = "usecase.main:run"
run_crew = "usecase.main:run"
train = "usecase.main:train"
replay = "usecase.main:replay"
test = "usecase.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
